<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="com.hermetic.keyboard.settings.SettingsActivity"
    android:isDefault="false">
    <subtype
        android:label="@string/subtype_en"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_pt_br"
        android:imeSubtypeLocale="pt_BR"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_es"
        android:imeSubtypeLocale="es"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_hebrew_transliterated"
        android:imeSubtypeLocale="he"
        android:imeSubtypeMode="keyboard" />
</input-method>
